Fixed spacing between card border and emoji

--- a/code/src/components/layout/likes.css
+++ b/code/src/components/layout/likes.css
@@ -6,6 +6,7 @@
   color: #777777;
   font-size: 0.9rem;
   font-weight: bold;
+  padding-left: 0.5rem;
   width: 100%;
 }
 
